adding search
